Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,9 +5,20 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
+# Step to build the parent POM
 - task: Maven@3
   inputs:
-    mavenPomFile: 'webapp/pom.xml'   # Specify the webapp module POM file
+    mavenPomFile: 'pom.xml'   # Build the parent POM first
+    mavenOptions: '-Xmx3072m'
+    javaHomeOption: 'JDKVersion'
+    jdkVersionOption: '1.8'
+    jdkArchitectureOption: 'x64'
+    goals: 'clean install'    # Install the parent POM into the local repository
+
+# Step to build the webapp module
+- task: Maven@3
+  inputs:
+    mavenPomFile: 'webapp/pom.xml'
     mavenOptions: '-Xmx3072m'
     javaHomeOption: 'JDKVersion'
     jdkVersionOption: '1.8'
@@ -15,3 +26,16 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'clean package'
+
+# Copy the WAR file to the artifact staging directory
+- task: CopyFiles@2
+  inputs:
+    contents: 'webapp/target/*.war'   # Path to your WAR file
+    targetFolder: '$(Build.ArtifactStagingDirectory)'
+
+# Publish the WAR file as an artifact
+- task: PublishBuildArtifacts@1
+  inputs:
+    pathToPublish: '$(Build.ArtifactStagingDirectory)'
+    artifactName: 'drop'
+    publishLocation: 'Container'
