--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
         <groupId>com.example.maven-project</groupId>
         <artifactId>maven-project</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>webapp</artifactId>
     <packaging>war</packaging>
